--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ chardet==3.0.4
 Click==7.0
 colorama==0.4.1
 Flask==1.1.1
+Flask-Login==0.4.1
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
 idna==2.8
@@ -23,3 +24,4 @@ typed-ast==1.2.0
 urllib3==1.25.6
 Werkzeug==0.16.0
 wrapt==1.11.2
+WTForms==2.2.1
